# pyTenable-client

./: .gitignore  pyproject.toml  was_client.py
pytenable_client/: client.py
tests/: test_pytenable_client.py
